%% Some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg
%% Since R 3.2.0, additional system Rd macros are available,
%% e.g., \CRANpkg and \doi. See the definitions in the file
%% file.path(R.home("share"), "Rd", "macros", "system.Rd")

\name{NEWS}
\title{News for Package 'surveillance'}
\encoding{latin1}


\section{Changes in surveillance version 1.12.3 (2016-11-22)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item 
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{hhh4()} guards against the misuse of
    \code{family = factor("Poisson")} for univariate time series.
    Previously, this resulted in a negative binomial model by
    definition, but is now interpreted as \code{family = "Poisson"}
    (with a warning).
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item 
  }
}

}


\section{Changes in surveillance version 1.12.2 (2016-11-14)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item The internal auxiliary function, which determines the sets of
    potential source events in \code{"epidataCS"} has been implemented
    in \samp{C++}, which accelerates \code{as.epidataCS()},
    \code{permute.epidataCS()}, and therefore \code{epitest()}.
    This is only really relevant for \code{"epidataCS"} with a large
    number of events (>1000, say).

    \item Negative-binomial \code{hhh4()} models may not converge for
    non-overdispersed data (try, e.g.,
    \code{set.seed(1); hhh4(sts(rpois(104, 10)), list(family="NegBin1"))}).
    The resulting non-convergence warning message now mentions low
    overdispersion if this is detected. [suggested by Johannes Bracher]

    \item An additional \code{type="delay"} option was added to the
    \code{plot} method of \code{stsNC} objects. Furthermore, an
    \code{animate_nowcasts} function allows one to animate a sequence of
    nowcasts.

  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item In the \code{animate}-method for \code{"sts"} objects,